
Version 1.3.0 (6/15/2025)
=========================================

User-visible features
---------------------
* Option to use a discrete bead model for chain conformations

Developer-visible changes
-------------------------
* Introduction of WaveList in code for pscf_pc, by analogy to pscf_pg
* Re-organization to reduce code duplication between Rpc, Rpg namespaces
* Move file manipulation functions from System to FieldIo in Rpc, Rpg

Version 1.2.0 (4/14/2025)
=========================================

User-visible features
---------------------
* Stochastic field theoretic simulation (FTS) using real-valued fields 
  and a partial saddle-point approximation (PS-FTS) in programs with
  periodic boundary conditions (pc, pg)

  Implementation of PS-FTS includes:

   - Brownian Dynamics (BD) and Monte-Carlo (MC) simulations
   - BD Steps: Leimkuhler-Matthews, predictor-corrector and explicit steps
   - MC Moves: Real-space and Force-bias/"Smart" MC moves
   - Efficient "Compressor" algorithms to find partial saddle-points
   - "Analyzer" classes to measure structure factor and other observables
   - Tools for creating and postprocessing field trajectory files
   - Continuous variation ("Ramp") of one or more parameters
   - Extensible modification ("Perturbation") of FTS Hamiltonian
   - Einstein-crystal method of free energy calculation

* Addition of confinement, external fields and thin films to the pscf_pg
  GPU code (pg)

* Commands to manipulate field files by replicating the unit cell, 
  increasing the number of spatial dimensions (e.g., create a 1D lamellar 
  of 2D hexagonal phase in 3D), or scaling fields by a constant (pc, pg).

User-visible changes
--------------------
* Program names changed to pscf_1d, pscf_pc, and pscf_pg
* Added -d command line option to specify spatial dimension (pc, pg)
* Renamed initialization script to "configure" (was named "setup")
* Renamed script for compile time options to "setopts" (was "configure")